liferay-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: liferay
  name: liferay
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: liferay
